(rule
 (deps
  %{project_root}/package.json
  %{project_root}/babel.config.js
  (source_tree %{project_root}/node_modules))
 (target bundle.js)
 (mode promote)
 (enabled_if
  (= %{profile} "with-bundle"))
 (action
  (run
   %{project_root}/node_modules/@babel/cli/bin/babel.js
   %{dep:bundle-es6.js}
   --config-file
   %{project_root}/babel.config.js
   -o
   %{target})))
